--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ h1 {
   padding-left: 40px;
   padding-bottom: 40px;
   margin-bottom: 150px;
-  background-image: url(../resources/Rectangle.png);
+  background-image: url(`../resources/Rectangle.png`);
   width: 1150px;
   height: 500px;
 }
